[project]
name = "wrench"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Sammarone",email = "alansammarone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flyingsquid @ git+https://github.com/Bay-AI/flyingsquid.git",
    "snorkel (>=0.9.7)",
    "transformers (>=4.6.1)",
    "torchvision (>=0.10.0)",
    "numba (>=0.61.0,<0.62.0)",
    "sentence-transformers (>=1.1.1)",
    "nltk (>=3.9.1,<4.0.0)",
    "pytokenizations (>=0.8.4,<0.9.0)",
    "seqeval (>=1.2.2)",
    "numbskull @ git+https://github.com/Bay-AI/numbskull.git",
    "snorkel-metal (>=0.5.0)",
    "tensorboardx (>=2.6.2.2,<3.0.0.0)",
    "cvxpy (>=1.1.13)",
    "cytoolz (>=0.11.0)",
    "dill (>=0.3.0,<0.4.0)",
    "future (>=0.18.2)",
    "higher (>=0.2)",
    "typing-extensions (>=3.10.0.0)",
    "torch (>=1.2.0)",
    "tqdm (>=4.33.0,<5.0.0)",
    "numpy (<2.0.0)",
    "scikit-learn (>=0.20.2)",
    "optuna (>=2.7.0,<=2.10.0)",
    "pandas (>=1.1.5,<=2.0.0)",
    "pillow (>=8.3.2)",
    "openml (>=0.12.2)",
    "scipy (>=1.2.0,<2.0.0)",
    "skweak (>=0.2.13)",
    "networkx (>=2.2,<2.7)",
    "hyperlm (>=0.0.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

